--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,13 @@
         "platformsh/console-form": "0.0.8",
         "platformsh/client": "0.5.8",
         "symfony/console": "^3.0",
-        "symfony/yaml": "^3.0 || ^2.6",
         "symfony/finder": "^3.0",
         "symfony/filesystem": "^3.0",
         "symfony/process": "^3.0",
         "stecman/symfony-console-completion": "~0.7",
         "symfony/event-dispatcher": "^3.0",
-        "padraic/phar-updater": "^1.0"
+        "padraic/phar-updater": "^1.0",
+        "symfony/yaml": "^3.1"
     },
     "suggest": {
         "drush/drush": "For Drupal projects"
