--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "stecman/symfony-console-completion": "~0.7",
         "symfony/event-dispatcher": "^3.0",
         "padraic/phar-updater": "^1.0",
-        "symfony/yaml": "^3.1"
+        "symfony/yaml": "^3.1",
+        "albertofem/rsync-lib": "dev-master"
     },
     "suggest": {
         "drush/drush": "For Drupal projects"
